# logguardian

./: .$SCHEMA.drawio.bkp  .$schema TECH.png.bkp  .env.example  .gitignore  DEMARRAGE.md  LogGuardian_Phase1_Infrastructure.md  LogGuardian_Phase2_Pipeline.md  RAPPORT_PROJET_LOGGUARDIAN.md  README.md  SCHEMA.drawio  buildspec.yml  cloudbuild.yaml  cmd  commandes.md  docker-compose.yml
docs/: 01-vue-ensemble.md  02-architecture.md  03-prerequis.md  04-installation-locale.md  05-installation-gcp.md  06-configuration.md  13-modele-ml.md  14-reentrainement.md  15-cicd.md  16-observabilite.md  17-commandes.md  18-troubleshooting.md  19-couts.md  README.md  architecture-gcp.drawio
email-sender/: main.py  requirements.txt
etl-processor/: .env.example  README.md  requirements.txt
feedback/: negative_feedback_analysis.csv  rag_feedback.jsonl
k8s/: README.md  email-sender.yaml  etl-processor.yaml  kafka.yaml  kustomization.yaml  log-generator.yaml  ml-model.yaml  monitoring-ui.yaml  namespace.yaml
log-generator/: .env.example  README.md  requirements.txt
ml-model/: .env.example  Dockerfile  README.md  notebook_evaluation.ipynb  notebook_feedback_evaluation_feedback.ipynb  pyproject.toml  requirements.txt  run_train.py
ml-model/models/: feature_scaler.pkl  lstm_autoencoder.pt  threshold.json  vocabulary.pkl
ml-model/src/: config.py  consumer.py  main.py  producer.py
ml-model/src/inference/: buffer.py  detector.py
ml-model/src/trainer/: dataset.py  features.py  model.py  train.py
ml-model/tests/: test_buffer.py  test_features.py
models/: embedding_table.npy  (+4 more)
(+47 files in other folders)
